--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,21 +36,28 @@ stages:
         vmImage: ubuntu-20.04
 
       steps:
+
       - task: TerraformInstaller@0
         inputs:
           terraformVersion: 'latest'
 
-      - task: TerraformTaskV2@2
-        displayName: Init Basic
-        inputs:
-          provider: 'azurerm'
-          command: 'init'
-          workingDirectory: 'tests/basic/'
-          backendServiceArm: 'sandbox-terraform-testing-spn'
-          backendAzureRmResourceGroupName: 'Terraform-Storage-accountRG'
-          backendAzureRmStorageAccountName: 'softcattfmodulestate'
-          backendAzureRmContainerName: 'tf-modules-azure-recovery-services-vault'
-          backendAzureRmKey: 'terraform.tfstate'
+
+      - bash: |
+          terraform init
+        workingDirectory: 'tests/basic/'
+        displayName: Terraform Init 
+
+      # - task: TerraformTaskV2@2
+      #   displayName: Init Basic
+      #   inputs:
+      #     provider: 'azurerm'
+      #     command: 'init'
+      #     workingDirectory: 'tests/basic/'
+      #     backendServiceArm: 'sandbox-terraform-testing-spn'
+      #     # backendAzureRmResourceGroupName: 'Terraform-Storage-accountRG'
+      #     # backendAzureRmStorageAccountName: 'softcattfmodulestate'
+      #     # backendAzureRmContainerName: 'tf-modules-azure-recovery-services-vault'
+      #     # backendAzureRmKey: 'terraform.tfstate'
 
       - task: TerraformTaskV2@2
         displayName: Validate Basic
@@ -87,6 +94,14 @@ stages:
 
       steps:
 
+      - task: AzureKeyVault@2
+        displayName: Get credentials from Key Vault
+        inputs:
+          azureSubscription: ' Managed Azure Terraform Testing'
+          KeyVaultName: 'kvpipelinetestingsecrets'
+          SecretsFilter: '*'
+          RunAsPreJob: true
+
       - task: chef-software.chef-azdo.install.component@3
         displayName: Install Inspec
         inputs:
@@ -96,10 +111,10 @@ stages:
       - bash: |
             inspec exec tests/basic/azure-inspec-tests  -t azure:// --chef-license=accept
         env:
-            AZURE_CLIENT_ID: $(ARM_CLIENT_ID)
-            AZURE_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
-            AZURE_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
-            AZURE_TENANT_ID: $(ARM_TENANT_ID)
+            AZURE_CLIENT_ID: $(CLIENTID)
+            AZURE_CLIENT_SECRET: $(CLIENTSECRET)
+            AZURE_SUBSCRIPTION_ID: $(SUBSCRIPTIONID)
+            AZURE_TENANT_ID: $(TENANTID)
         displayName: Run Basic QC
         continueOnError: true
 
@@ -125,10 +140,10 @@ stages:
           command: 'init'
           workingDirectory: 'tests/basic/'
           backendServiceArm: 'sandbox-terraform-testing-spn'
-          backendAzureRmResourceGroupName: 'Terraform-Storage-accountRG'
-          backendAzureRmStorageAccountName: 'softcattfmodulestate'
-          backendAzureRmContainerName: 'tf-modules-azure-recovery-services-vault'
-          backendAzureRmKey: 'terraform.tfstate'
+          # backendAzureRmResourceGroupName: 'Terraform-Storage-accountRG'
+          # backendAzureRmStorageAccountName: 'softcattfmodulestate'
+          # backendAzureRmContainerName: 'tf-modules-azure-softcat-tagging-basic'
+          # backendAzureRmKey: 'terraform.tfstate'
 
       - task: TerraformTaskV2@2
         displayName: Destroy Basic
