--- a/tests/basic/azure-inspec-tests/inspec.yml
+++ b/tests/basic/azure-inspec-tests/inspec.yml
@@ -1,6 +1,8 @@
 name: azure-inspec-tests
 title: Azure InSpec Profile
 maintainer: Nielsen Pierce
+copyright: The Authors
+copyright_email: nielsenpi@softcat.com
 license: Apache-2.0
 summary: An InSpec Compliance Profile For Azure
 version: 0.1.0
@@ -10,3 +12,4 @@ depends:
   url: https://github.com/inspec/inspec-azure/archive/main.tar.gz
 supports:
 - platform: azure
+
